<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="inputHint">Input your equation here.</string>
    <string name="answerHint">Result will be here.</string>
    <string name="Sin">sin</string>
    <string name="Abs">abs</string>
    <string name="Acos">acos</string>
    <string name="Asin">asin</string>
    <string name="Atan">atan</string>
    <string name="Cos">cos</string>
    <string name="Cosh">cosh</string>
    <string name="Exp">exp</string>
    <string name="Log">log</string>
    <string name="Log10">log10</string>
    <string name="Pow">^</string>
    <string name="Sinh">sinh</string>
    <string name="Sqrt">\u221A</string>
    <string name="Cbrt">cbrt</string>
    <string name="Tan">tan</string>
    <string name="Tanh">tanh</string>
    <string name="d0">0</string>
    <string name="d1">1</string>
    <string name="d2">2</string>
    <string name="d3">3</string>
    <string name="d4">4</string>
    <string name="d5">5</string>
    <string name="d6">6</string>
    <string name="d7">7</string>
    <string name="d8">8</string>
    <string name="d9">9</string>
    <string name="Eq">=</string>
    <string name="Pt">.</string>
    <string name="Div">/</string>
    <string name="Plus">+</string>
    <string name="Minus">-</string>
    <string name="Mply">*</string>
    <string name="Rand">rand</string>
    <string name="Mod">mod</string>
    <string name="E">e</string>
    <string name="PI">\u03C0</string>

    <string name="OP">(</string>
    <string name="CP">)</string>
    <string name="Cancel">C</string>
    <string name="History">Hist</string>
    <string name="history">Your previous input with results:</string>
    <string name="google">G</string>
</resources>